--- a/src/templates/inventory/add.html
+++ b/src/templates/inventory/add.html
@@ -22,7 +22,7 @@
         <div class="table-body">
             <div class="table-row" id="add-row">
                 <div>
-                    <button role="button"><i class="bi bi-plus-circle"></i>Add item</button>
+                    <button role="button" autofocus><i class="bi bi-plus-circle"></i>Add item</button>
                 </div>
             </div>
         </div>
