--- a/src/static/style_main.css
+++ b/src/static/style_main.css
@@ -42,7 +42,7 @@ textarea {
 }
 
 input[type=text], input[type=password], input[type=search], input[type=number], input[type=email], textarea {
-    padding: 0.3rem 0rem;
+    padding: 0.3rem;
     background: none;
     border: none;
     border-bottom: 0.05rem solid var(--gray);
@@ -50,17 +50,14 @@ input[type=text], input[type=password], input[type=search], input[type=number], 
     transition: background 0.1s, border-bottom 0.1s;
 }
 
-input[type=number]:invalid, input[type=email]:invalid {
+input[type=text]:not(:placeholder-shown):invalid, input[type=number]:not(:placeholder-shown):invalid, input[type=email]:not(:placeholder-shown):invalid {
     border-bottom: 0.05rem solid var(--light-red-2);
     color: var(--red);
     font-weight: bold;
-}
-
-input[type=number]:invalid {
     background: var(--light-red);
 }
 
-input[type=number]:invalid:focus, input[type=email]:invalid:focus {
+input[type=text]:not(:placeholder-shown):invalid:focus, input[type=number]:not(:placeholder-shown):invalid:focus, input[type=email]:not(:placeholder-shown):invalid:focus {
     border-bottom: 0.05rem solid var(--red);
 }
 
@@ -100,6 +97,12 @@ input[type=submit] {
     font-weight: bold;
     background: var(--blue);
     box-shadow: 0rem 0.2rem 0.4rem var(--blue-shadow);
+}
+
+input[type=submit]:disabled:active {
+    background: unset;
+    box-shadow: unset;
+    outline: unset;
 }
 
 input[type=submit]:hover:not(:disabled),
@@ -208,11 +211,4 @@ main {
     gap: 10px;
     justify-content: flex-end;
     align-items: center;
-}
-
-.message{
-    margin: 0;
-    display:none; 
-    font-style: italic; 
-    color: var(--red);
 }
