--- a/src/static/style_modal.css
+++ b/src/static/style_modal.css
@@ -65,31 +65,31 @@ dialog form label {
     justify-self: end;
 }
 
-dialog form > span:last-child {
+dialog .form-bottom {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: end;
     gap: 1rem;
 }
 
-dialog form > span:last-child > * {
+dialog .form-bottom > * {
     flex-grow: 1;
     flex-shrink: 1;
 }
 
-dialog form > span:last-child input[type=button],
-dialog form > span:last-child input[type=submit] {
+dialog .form-bottom input[type=button],
+dialog .form-bottom input[type=submit] {
     flex-grow: 0;
     flex-shrink: 0;
 }
 
 dialog form .form-msg {
+    margin: 0;
     font-style: italic;
     text-align: right;
 }
 
 dialog form .form-msg.error {
-    font-weight: bold;
     color: var(--red);
 }
 
