--- a/src/static/style_users.css
+++ b/src/static/style_users.css
@@ -1,26 +1,30 @@
-.user-table .table-body button {
+.user-table:not(.forms) .table-body button {
     font-weight: bold;
     color: white;
 }
 
-.user-table .table-body button.green {
+.user-table .table-body button.btn-green {
     background: var(--green);
     box-shadow: 0rem 0.2rem 0.4rem var(--green-shadow);
 }
 
-.user-table .table-body button.green:hover,
-.user-table .table-body button.green:focus {
+.user-table .table-body button.btn-green:hover,
+.user-table .table-body button.btn-green:focus {
     background: var(--dark-green);
     box-shadow: 0rem 0.1rem 0.2rem var(--green-shadow);
 }
 
-.user-table .table-body button.red {
+.user-table .table-body button.btn-red {
     background: var(--red);
     box-shadow: 0rem 0.2rem 0.4rem var(--red-shadow);
 }
 
-.user-table .table-body button.red:hover,
-.user-table .table-body button.red:focus {
+.user-table .table-body button.btn-red:hover,
+.user-table .table-body button.btn-red:focus {
     background: var(--dark-red);
     box-shadow: 0rem 0.1rem 0.2rem var(--red-shadow);
+}
+
+.add-table.users select {
+    width: 100%;
 }
