--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -14,8 +14,8 @@
                 <h1>Find your account</h1>
                 <form>
                     <label for="email">Please enter the email associated with your account.</label>
-                    <input id="email" type="email" placeholder="example@gmail.com" pattern="^([0-9a-z]|([0-9a-z][\.\-_\+]{1}[0-9a-z]))+@gmail.com$" autofocus>
-                    <span>
+                    <input id="email" type="email" placeholder="example@gmail.com" pattern="^([0-9a-z]|([0-9a-z][\.\-_\+]{1}[0-9a-z]))+@gmail.com$" required autofocus>
+                    <span class="form-bottom">
                         <p class="form-msg"></p>
                         <input type="button" class="cancel" value="Cancel">
                         <input type="submit" value="Submit" disabled>
@@ -32,7 +32,7 @@
                         <button type="button" role="button" id="resend-code" class="hidden">Resend code</button>
                     </span>
                     <p><i><b style="color: var(--red);">NOTE:</b> This code will expire in <b>3 minutes</b>.</i></p>
-                    <span>
+                    <span class="form-bottom">
                         <p class="form-msg"></p>
                         <input type="button" class="cancel" value="Cancel">
                         <input type="submit" value="Submit" disabled>
@@ -52,7 +52,7 @@
                     <span id="password-note">
                         <p><b>NOTE:</b> Your new password must contain 8 to 12 alphanumeric characters.</p>
                     </span>
-                    <span>
+                    <span class="form-bottom">
                         <p class="form-msg"></p>
                         <input type="button" class="cancel" value="Cancel">
                         <input type="submit" value="Submit" disabled>
@@ -125,11 +125,14 @@
 
     document.querySelector("#modal-forgot-password-1 form").addEventListener("input", () => {
         document.querySelector('#modal-forgot-password-1 .form-msg').innerText = "";
+        document.querySelector("#modal-forgot-password-1 .cancel").disabled = false;
         document.querySelector("#modal-forgot-password-1 input[type=submit]").disabled = !document.querySelector("#modal-forgot-password-1 form").checkValidity();
     });
 
     document.querySelector("#modal-forgot-password-1 form").addEventListener("submit", e => {
         e.preventDefault();
+
+        document.querySelectorAll("#modal-forgot-password-1 .form-bottom input").forEach(x => x.disabled = true);
         
         document.querySelector("#modal-forgot-password-1 .form-msg").classList.remove("error");
         document.querySelector("#modal-forgot-password-1 .form-msg").innerText = "Please wait\u2026";
@@ -152,34 +155,21 @@
             } else {
                 document.querySelector("#modal-forgot-password-1 form").reset();
                 document.querySelector('#modal-forgot-password-1 .form-msg').classList.add("error");
-
-                let response = await d.json();
-                let errorCode = response['error'];
-                if(errorCode == 2003){
-                    document.querySelector('#modal-forgot-password-1 .form-msg').innerText = "Database error. Please try again later."
-                }
-                else if(errorCode == -1){
-                    document.querySelector('#modal-forgot-password-1 .form-msg').innerText = response['msg'];
-                }
-                else{
-                    document.querySelector('#modal-forgot-password-1 .form-msg').innerText = "Internal server error. Please try again later."
-                }
+                document.querySelector('#modal-forgot-password-1 .form-msg').innerHTML = `<b>ERROR:</b> ${(await d.json())['error']}`;
             }
-        })
-        .catch(() => {
-            document.querySelector("#modal-forgot-password-1 form").reset();
-            document.querySelector('#modal-forgot-password-1 .form-msg').classList.add("error");
-            document.querySelector('#modal-forgot-password-1 .form-msg').innerText = "Server unavailable. Please try again later.";
         });
     });
 
     document.querySelector("#modal-forgot-password-2 form").addEventListener("input", () => {
         document.querySelector('#modal-forgot-password-2 .form-msg').innerText = "";
+        document.querySelector("#modal-forgot-password-2 .cancel").disabled = false;
         document.querySelector("#modal-forgot-password-2 input[type=submit]").disabled = !document.querySelector("#modal-forgot-password-1 form").checkValidity();
     });
 
     document.querySelector("#modal-forgot-password-2 form").addEventListener("submit", e => {
         e.preventDefault();
+        
+        document.querySelectorAll("#modal-forgot-password-2 .form-bottom input").forEach(x => x.disabled = true);
         
         document.querySelector("#modal-forgot-password-2 .form-msg").classList.remove("error");
         document.querySelector("#modal-forgot-password-2 .form-msg").innerText = "Please wait\u2026";
@@ -201,34 +191,21 @@
             } else {
                 document.querySelector("#modal-forgot-password-2 form").reset();
                 document.querySelector('#modal-forgot-password-2 .form-msg').classList.add("error");
-
-                let response = await d.json();
-                let errorCode = response['error'];
-                if(errorCode == 2003){
-                    document.querySelector('#modal-forgot-password-2 .form-msg').innerText = "Database error. Please try again later."
-                }
-                else if(errorCode == -1){
-                    document.querySelector('#modal-forgot-password-2 .form-msg').innerText = response['msg'];
-                }
-                else{
-                    document.querySelector('#modal-forgot-password-2 .form-msg').innerText = "Internal server error. Please try again later."
-                }
+                document.querySelector('#modal-forgot-password-2 .form-msg').innerHTML = `<b>ERROR:</b> ${(await d.json())['error']}`;
             }
-        })
-        .catch(() => {
-            document.querySelector("#modal-forgot-password-2 form").reset();
-            document.querySelector('#modal-forgot-password-2 .form-msg').classList.add("error");
-            document.querySelector('#modal-forgot-password-2 .form-msg').innerText = "Server unavailable. Please try again later.";
         });
     });
 
     document.querySelector("#modal-forgot-password-3 form").addEventListener("input", () => {
         document.querySelector('#modal-forgot-password-3 .form-msg').innerText = "";
+        document.querySelector("#modal-forgot-password-3 .cancel").disabled = false;
         newPasswordValidity();
     });
 
     document.querySelector("#modal-forgot-password-3 form").addEventListener("submit", e => {
         e.preventDefault();
+        
+        document.querySelectorAll("#modal-forgot-password-3 .form-bottom input").forEach(x => x.disabled = true);
         
         document.querySelector("#modal-forgot-password-3 .form-msg").classList.remove("error");
         document.querySelector("#modal-forgot-password-3 .form-msg").innerText = "Please wait\u2026";
@@ -250,21 +227,8 @@
             } else {
                 document.querySelector("#modal-forgot-password-3 form").reset();
                 document.querySelector('#modal-forgot-password-3 .form-msg').classList.add("error");
-                
-                let response = await d.json();
-                let errorCode = response['error'];
-                if(errorCode == 2003){
-                    document.querySelector('#modal-forgot-password-3 .form-msg').innerText = "Database error. Please try again later."
-                }
-                else{
-                    document.querySelector('#modal-forgot-password-3 .form-msg').innerText = "Internal server error. Please try again later."
-                }
+                document.querySelector('#modal-forgot-password-3 .form-msg').innerHTML = `<b>ERROR:</b> ${(await d.json())['error']}`;
             }
-        })
-        .catch(() => {
-            document.querySelector("#modal-forgot-password-3 form").reset();
-            document.querySelector('#modal-forgot-password-3 .form-msg').classList.add("error");
-            document.querySelector('#modal-forgot-password-3 .form-msg').innerText = "Server unavailable. Please try again later.";
         });
 
         document.querySelector("#new-password-label").classList.remove("valid");
