--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -15,8 +15,8 @@
                     <span></span>
                 </span>
             </span>
-            <span>
-                <p class="message"></p>
+            <span class="modal-bottom">
+                <p class="modal-msg"></p>
                 <input type="button" class="cancel" value="Cancel">
                 <input type="submit">
             </span>
@@ -156,8 +156,8 @@
         document.querySelector("#modal-requests input[type=submit]").classList.remove("btn-red", "btn-green");
         document.querySelector("#modal-requests input[type=submit]").replaceWith(document.querySelector("#modal-requests input[type=submit]").cloneNode());
 
-        document.querySelector("#modal-requests .message").style.display = "none";
-        document.querySelector("#modal-requests .message").innerHTML = "";
+        document.querySelector(".modal-msg").classList.remove("error");
+        document.querySelector(".modal-msg").innerHTML = "";
     });
 
     document.querySelector("#modal-requests .modal-back").addEventListener("click", () => document.querySelector("#modal-requests").close());
