--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -393,7 +393,7 @@ main h1 {
 .form-bottom {
     width: 100%;
     display: flex;
-    align-items: baseline;
+    align-items: center;
     gap: 1rem;
 }
 
