--- a/src/templates/user/users.html
+++ b/src/templates/user/users.html
@@ -8,8 +8,8 @@
         <h1></h1>
         <p></p>
         <form>
-            <span>
-                <p class="message"></p>
+            <span class="modal-bottom">
+                <p class="modal-msg"></p>
                 <input type="button" class="cancel" value="Cancel">
                 <input type="submit">
             </span>
@@ -113,7 +113,7 @@
         document.querySelector("#modal-users input[type=submit]").classList.remove("btn-red", "btn-green");
         document.querySelector("#modal-users input[type=submit]").replaceWith(document.querySelector("#modal-users input[type=submit]").cloneNode());
 
-        document.querySelector("#modal-users .message").innerHTML = "";
+        document.querySelector(".modal-msg").innerHTML = "";
     });
 
     document.querySelector("#modal-users .modal-back").addEventListener("click", () => document.querySelector("#modal-users").close());
