--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -25,8 +25,8 @@
                     <span id="password-note">
                         <p><b>NOTE:</b> Your new password must contain 8 to 12 alphanumeric characters.</p>
                     </span>
-                    <span>
-                        <p class="form-msg"></p>
+                    <span class="modal-bottom">
+                        <p class="modal-msg"></p>
                         <input type="button" class="cancel" value="Cancel">
                         <input type="submit" value="Submit" disabled>
                     </span>
@@ -52,8 +52,8 @@
                         <input id="new-email" type="email" placeholder="example@gmail.com" pattern="^([0-9a-z]|([0-9a-z][\.\-_\+]{1}[0-9a-z]))+@gmail.com$" required>
                     </span>
                     <p style="font-size: smaller;"><i><b>NOTE:</b> Due to technical restrictions, only Gmail emails are accepted at this time.</i></p>
-                    <span>
-                        <p class="form-msg"></p>
+                    <span class="modal-bottom">
+                        <p class="modal-msg"></p>
                         <input type="button" class="cancel" value="Cancel">
                         <input type="submit" value="Submit" disabled>
                     </span>
