--- a/src/static/style_requests.css
+++ b/src/static/style_requests.css
@@ -44,6 +44,13 @@
     box-shadow: 0rem 0.1rem 0.2rem var(--blue-shadow);
 }
 
+.request-table .issue:disabled,
+.request-table .issue:disabled:hover,
+.request-table .issue:disabled:focus {
+    background: var(--gray);
+    box-shadow: 0rem 0.2rem 0.4rem var(--shadow);
+}
+
 .request-table .actions .green {
     background: var(--green);
     box-shadow: 0rem 0.2rem 0.4rem var(--green-shadow);
