--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -113,6 +113,8 @@
             </footer>
         </div>
 
+        <div id="snackbar"></div>
+
         <main>
             {% block main %}
             {% endblock %}
@@ -219,21 +221,7 @@
             } else {
                 document.querySelector("#form-change-email").reset();
                 document.querySelector('#form-change-email .form-msg').classList.add("error");
-
-                let response = await d.json()
-                let errorCode = response['error'];
-                if(errorCode == 2003){
-                    document.querySelector("#form-change-email .form-msg").innerText = "Database error. Please try again later."
-                }
-                else if(errorCode == -1){
-                    document.querySelector("#form-change-email .form-msg").innerText = response['msg'];
-                }
-                else if(errorCode == 1062){
-                    document.querySelector("#form-change-email .form-msg").innerText = response['msg'] + " is already taken.";
-                }
-                else{
-                    document.querySelector("#form-change-email .form-msg").innerText = "Internal server error. Please try again later."
-                }
+                document.querySelector("#form-change-email .form-msg").innerText = (await d.json())["error"]
             }
         })
         .catch(() => {
@@ -272,18 +260,7 @@
             } else {
                 document.querySelector("#form-change-password").reset();
                 document.querySelector('#form-change-password .form-msg').classList.add("error");
-
-                let response = await d.json();
-                let errorCode = response['error']
-                if(errorCode == 2003){
-                    document.querySelector("#form-change-password .form-msg").innerText = "Database error. Please try again later."
-                }
-                else if(errorCode == -1){
-                    document.querySelector("#form-change-password .form-msg").innerText = response['msg'];
-                }
-                else{
-                    document.querySelector("#form-change-password .form-msg").innerText = "Internal server error. Please try again later."
-                }
+                document.querySelector("#form-change-password .form-msg").innerText = (await d.json())["error"]
             }
         })
         .catch(() => {
