--- a/src/templates/forms/forms.html
+++ b/src/templates/forms/forms.html
@@ -158,32 +158,38 @@
                         fetch(`./${v}?item=${row.firstChild.innerText}`)
                         .then(res => {
                             if(res.status === 500){
-                                throw(res)
+                                res.json()
+                                .then(a => {
+                                    let x = document.querySelector("#snackbar");
+                                    x.innerText = a["error"];
+                                    x.classList.add("show");
+                                    setTimeout(function(){ x.classList.remove("show") }, 3000);
+                                })
                             }
-
-                            return res.body.getReader().read()
-                        })
-                        .then(data => {
-                            if (!data.value) throw `Item ID ${itemID.value} not found.`;
+                            else{
+                                res.body.getReader().read()
+                                .then(data => {
+                                    if (!data.value) throw JSON.stringify({"error": "Item not found."});
                             
-                            let link = window.URL.createObjectURL(new File([data.value], filename, {
-                                "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                            }));
-                            return link;
-                        })
-                        .then(link => {
-                            let a = document.createElement("a");
-                            a.href = link;
-                            a.download = filename;
-                            a.click();
-                        })
-                        .catch((error) => {
-                            error.json().then(a => {
-                                let x = document.querySelector("#snackbar");
-                                x.innerText = a["error"];
-                                x.classList.add("show");
-                                setTimeout(function(){ x.classList.remove("show") }, 3000);
-                            })
+                                    let link = window.URL.createObjectURL(new File([data.value], filename, {
+                                        "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                                    }));
+                                    return link;
+                                })
+                                .then(link => {
+                                    let a = document.createElement("a");
+                                    a.href = link;
+                                    a.download = filename;
+                                    a.click();
+                                })
+                                .catch((error) => {
+                                    let a = JSON.parse(error);
+                                    let x = document.querySelector("#snackbar");
+                                    x.innerText = a["error"];
+                                    x.classList.add("show");
+                                    setTimeout(function(){ x.classList.remove("show") }, 3000);
+                                });
+                            }
                         })
                     });
                 }
@@ -223,33 +229,41 @@
                             let filename = `Appendix${w}_${row.firstChild.innerText}`;
 
                             fetch(`./${w}?item=${row.firstChild.innerText}`)
-                            .then(d => {
-                                if (d.status === 200) return d;
-                                else throw(d)
-                            })
-                            .then(res => res.body.getReader().read())
-                            .then(data => {
-                                if (!data.value) throw `Item ID ${itemID.value} not found.`;
+                            .then(res => {
+                                if(res.status === 500){
+                                    res.json()
+                                    .then(a => {
+                                        let x = document.querySelector("#snackbar");
+                                        x.innerText = a["error"];
+                                        x.classList.add("show");
+                                        setTimeout(function(){ x.classList.remove("show") }, 3000);
+                                    })
+                                }
+                                else{
+                                    res.body.getReader().read()
+                                    .then(data => {
+                                        if (!data.value) throw JSON.stringify({"error": "Item not found."});
                                 
-                                let link = window.URL.createObjectURL(new File([data.value], filename, {
-                                    "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                                }));
-                                return link;
+                                        let link = window.URL.createObjectURL(new File([data.value], filename, {
+                                            "type": "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                                        }));
+                                        return link;
+                                    })
+                                    .then(link => {
+                                        let a = document.createElement("a");
+                                        a.href = link;
+                                        a.download = filename;
+                                        a.click();
+                                    })
+                                    .catch((error) => {
+                                        let a = JSON.parse(error);
+                                        let x = document.querySelector("#snackbar");
+                                        x.innerText = a["error"];
+                                        x.classList.add("show");
+                                        setTimeout(function(){ x.classList.remove("show") }, 3000);
+                                    });
+                                }
                             })
-                            .then(link => {
-                                let a = document.createElement("a");
-                                a.href = link;
-                                a.download = filename;
-                                a.click();
-                            })
-                            .catch((error) => {
-                                error.json().then(a => {
-                                    let x = document.querySelector("#snackbar");
-                                    x.innerText = a["error"];
-                                    x.classList.add("show");
-                                    setTimeout(function(){ x.classList.remove("show") }, 3000);
-                                })
-                            });
                         }
                     });
                 }
