--- a/src/static/style_inventory.css
+++ b/src/static/style_inventory.css
@@ -411,3 +411,11 @@ main h1 {
 .form-bottom .form-msg .mono {
     font-family: 'IBM Plex Mono', monospace;
 }
+
+#purpose-box{
+    width: 100%;
+    background: var(--white);
+    box-shadow: 0rem 0.25rem 0.5rem var(--shadow);
+    border-radius: 1rem;
+    padding: 0.75rem;
+}
