Initial addition of remarks on denial, issuance, and cancellation

--- a/src/templates/requests/requests.html
+++ b/src/templates/requests/requests.html
@@ -15,6 +15,10 @@
                     <span></span>
                 </span>
             </span>
+            <span id="req-remarks" style="display:none; flex-direction: row; column-gap: 0.3rem; align-items: center; justify-items: center;">
+                <label for="remarks">If you do, provide some remarks:</label>
+                <input id="remarks" type="text" placeholder="(optional)" style="flex-grow: 1;">
+            </span>
             <span class="modal-bottom">
                 <p class="modal-msg"></p>
                 <input type="button" class="cancel" value="Cancel">
