--- a/src/static/style_table.css
+++ b/src/static/style_table.css
@@ -68,12 +68,20 @@
     grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr 0.5fr;
 }
 
+.categories-table .table-row {
+    grid-template-columns: 1fr 2fr;
+}
+
 .add-table .table-row {
     grid-template-columns: 0.625fr 0.75fr 2fr 1fr 0.75fr 0.5fr 3rem;
 }
 
 .add-table.users .table-row {
     grid-template-columns: 0.5fr 0.5fr 1fr 0.5fr 3rem;
+}
+
+.add-table.categories .table-row {
+    grid-template-columns: 1fr 2fr 3rem;
 }
 
 .search-table .table-row {
@@ -88,8 +96,16 @@
     grid-template-columns: 0.5fr 0.5fr 0.5fr 0.75fr 0.25fr 3rem;
 }
 
+.search-table.categories .table-row {
+    grid-template-columns: 1fr 2fr 3rem;
+}
+
 .selection-table.remove .table-row {
     grid-template-columns: 0.625fr 0.75fr 2fr 0.5fr 0.75fr 0.5fr 0.5fr 3rem;
+}
+
+.selection-table.categories .table-row {
+    grid-template-columns: 1fr 2fr 3rem;
 }
 
 .selection-table.request .table-row {
